# trumo-task

./: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4mrvyhkggsa6mz4g44s9lqhyiy1c6an9-source
app/: config.py  main.py  models.py
app/templates/: index.html
